--- a/README
+++ b/README
@@ -12,6 +12,10 @@ should completely solve them by ... writing mat.h and vec.h by yourself..!
 Actually I wonder, are these files borrowed from opencv ?
 ------------------
 
+# some inspirations:
+http://www.3ds-models.net/blog/2010/10/11/20-great-3d-models-of-cartoon-characters/
+http://en.wikipedia.org/wiki/Marvin_the_Paranoid_Android
+
 
 
 
